--- a/Lab5BigPig/Resources/layout-land/Main.axml
+++ b/Lab5BigPig/Resources/layout-land/Main.axml
@@ -16,14 +16,14 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/linearLayout1"
-            android:gravity="center">
+            android:id="@+id/linearLayout1">
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout2"
-                android:layout_marginRight="90.0dp">
+                android:layout_marginRight="0.0dp"
+                android:layout_gravity="left">
                 <TextView
                     android:text="Player 1"
                     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -54,11 +54,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout3"
-                android:layout_marginLeft="0.0dp"
-                android:gravity="center">
+                android:layout_marginLeft="96.5dp"
+                android:layout_gravity="center">
                 <TextView
                     android:text="Enter names and press start"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView1" />
@@ -73,7 +73,8 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/pointsTV" />
+                    android:id="@+id/pointsTV"
+                    android:layout_gravity="center" />
                 <TextView
                     android:text="0"
                     android:layout_width="wrap_content"
@@ -87,7 +88,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout4"
-                android:layout_marginLeft="90.0dp">
+                android:layout_marginLeft="89.0dp"
+                android:layout_gravity="right">
                 <TextView
                     android:text="Player 2"
                     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -146,6 +148,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="false" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="match_parent"
+            android:layout_height="49.5dp"
+            android:id="@+id/linearLayout8"
+            android:gravity="center">
+            <LinearLayout
+                android:orientation="vertical"
+                android:minWidth="25px"
+                android:minHeight="25px"
+                android:layout_width="98.5dp"
+                android:layout_height="match_parent"
+                android:id="@+id/linearLayout9"
+                layout_centerHorizontal="true" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
