--- a/Lab5BigPig/Resources/layout/UIFrag.axml
+++ b/Lab5BigPig/Resources/layout/UIFrag.axml
@@ -30,25 +30,29 @@
             android:layout_toRightOf="@id/player1"
             android:layout_marginLeft="111.5dp"
             android:layout_marginTop="20.5dp" />
-        <EditText
+        <TextView
             android:layout_width="109.0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/p1EditText"
+            android:id="@+id/p1TextView"
             android:layout_below="@id/player1"
-            android:layout_marginLeft="50.0dp" />
-        <EditText
+            android:layout_marginLeft="50.0dp"
+            android:gravity="center"
+            android:textSize="18dp" />
+        <TextView
             android:layout_width="109.0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/p2EditText"
+            android:id="@+id/p2TextView"
             android:layout_below="@id/player2"
             android:layout_marginLeft="65.5dp"
-            android:layout_toRightOf="@id/p1EditText" />
+            android:layout_toRightOf="@id/p1TextView"
+            android:gravity="center"
+            android:textSize="18dp" />
         <TextView
             android:text="Score"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/p1EditText"
+            android:layout_below="@id/p1TextView"
             android:id="@+id/p1ScoreTV"
             android:layout_marginLeft="75.5dp"
             android:layout_marginTop="13.0dp" />
@@ -57,7 +61,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/p2EditText"
+            android:layout_below="@id/p2TextView"
             android:id="@+id/p2ScoreTV"
             android:layout_marginLeft="135.0dp"
             android:layout_marginTop="13.0dp"
@@ -138,13 +142,21 @@
             android:layout_marginLeft="49.0dp"
             android:textAllCaps="false" />
         <Button
-            android:id="@+id/newGameBtn"
-            android:text="New Game"
+            android:id="@+id/startGameBtn"
+            android:text="Start Game"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/rollDieBtn"
             android:layout_marginTop="32.5dp"
             android:layout_marginLeft="154.0dp"
             android:textAllCaps="false" />
+        <Button
+            android:text="Main Menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/startGameBtn"
+            android:id="@+id/mainMenuBtn"
+            android:layout_centerHorizontal="true" 
+            android:layout_marginTop="10dp"/>
     </RelativeLayout>
 </FrameLayout>
